# toolbox

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog.md  clerk.code-workspace  cliff.toml  lefthook.yaml  renovate.json  ruff.toml  taplo.toml  tombi.toml  toolbox.code-workspace  typos.toml
fuzz/fuzz-rax-nmea/: Cargo.toml
fuzz/fuzz-rax-nmea/fuzz_targets/: fuzz_rax_nmea.rs
python/: .coverage  .gitignore  pyproject.toml  recipe.yaml
python/.zed/: settings.json
python/clerk/: __init__.pyi
python/rattler/: build-clerk-py.ps1  build-toolbox-py.ps1  ci-clerk-py.ps1  pytest.ps1  recipe.yaml
python/scripts/: pixi-setup.ps1  pytest.ps1  ruff.ps1
python/src/clerk/: __init__.pyi  clerk.py
python/src/toolbox/: __init__.py  __init__.pyi  cycler.py  linker.py  magic.py  rayon.py  trail.py
python/tests/: path_macro.py  test_clerk.py  test_linker.py  test_loop.py  test_magic.py  test_rayon.py  test_trail.py
rust/: .gitignore  Cargo.toml  pixi.toml  rustfmt.toml  test.ps1
rust/.zed/: settings.json
rust/crates/arbor/: Cargo.toml
rust/crates/arbor/examples/: dir_tree.rs  dir_tree_lazy.rs
rust/crates/arbor/src/: indents.rs  lazy_renders.rs  lib.rs  presets.rs  protocol.rs  render.rs  renders.rs  trees.rs
rust/crates/arbor/tests/: test.rs
rust/crates/clap-style/: Cargo.toml
rust/crates/clap-style/src/: lib.rs
rust/crates/clerk/: Cargo.toml
rust/crates/clerk/src/: fast_setup.rs  file.rs  formatter.rs  layer.rs  lib.rs  log_embedded.rs  log_level.rs  log_normal.rs  log_tracing.rs  macros.rs  std_log.rs  term.rs
rust/crates/envoy/: Cargo.toml  README.md
rust/crates/envoy/src/: cstr_list_to_vec_string.rs  cstr_to_string.rs  error.rs  lib.rs  ptr_as_str.rs  ptr_list_to_vec_string.rs  ptr_to_string.rs  to_cstr.rs  to_cstr_list.rs  to_cstring.rs  to_vec_cstr.rs  to_vec_cstring.rs  vec_cstring.rs
rust/crates/kioyu/: Cargo.toml
rust/crates/kioyu/src/: dispatcher.rs  error.rs  job.rs  lib.rs  log.rs  resource.rs
rust/crates/kioyu/tests/: test_dispatcher.rs  test_kioyu.rs
rust/crates/mischief/: Cargo.toml
rust/crates/mischief-macros/: Cargo.toml
rust/crates/mischief-macros/src/: lib.rs
rust/crates/mischief/examples/: bail.rs  from_debug_error.rs  from_std_error.rs
rust/crates/mischief/src/: context.rs  diagnostic.rs  error.rs  fancy_render.rs  lib.rs  macros.rs  no_fancy_render.rs  presets.rs  protocol.rs  render.rs  render_presets.rs  render_protocol.rs  report.rs
rust/crates/mischief/tests/: test_report.rs
rust/crates/orc/src/: main.rs
rust/crates/polars-fmt/: Cargo.toml
rust/crates/polars-fmt/src/: lib.rs
rust/crates/rax/: Cargo.toml
rust/crates/rax-nmea/: Cargo.toml  README.md
rust/crates/rax-nmea/benches/: nmea.rs  rules.rs
rust/crates/rax-nmea/examples/: gps.rs
rust/crates/rax-nmea/src/: common.rs  data.rs  dispatcher.rs  error.rs  lib.rs  macros.rs  rules.rs  sentence.rs  utils.rs
rust/crates/rax-nmea/tests/: parse_nmea.rs
rust/crates/rax/benches/: rules.rs
rust/crates/rax/examples/: list-devices.rs  serial-reader-async.rs  serial-reader.rs  text-reader-async.rs  text-reader.rs
rust/crates/rax/src/: device.rs  error.rs  io.rs  lib.rs  str_parser.rs  string.rs
rust/crates/serialport-ext/: Cargo.toml
rust/crates/serialport-ext/examples/: list-devices.rs
rust/crates/serialport-ext/src/: lib.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_target_1.rs
rust/scripts/: cargo-bench.ps1  cargo-clean.ps1  cargo-clippy.ps1  cargo-doc.ps1  cargo-fmt.ps1  cargo-machete.ps1  cargo-miri.ps1  cargo-test.ps1  setup.ps1
rust/src/: file.rs  formatter.rs  lib.rs  macros.rs  term.rs
tools/orc/: .gitignore  Cargo.toml  pixi.toml  rustfmt.toml
tools/orc/scripts/: setup.ps1
tools/orc/src/: cli.rs  dep_tree.rs  draft.rs  main.rs
tools/orc/src/dep_tree/: linux.rs  win.rs
tools/orc/tests/: test.rs
tools/orc/tests/snapshots/: test__missing.snap  test__simple.snap  test__test_limit-0-linux.snap  test__test_limit-0-win.snap  test__test_limit-0-win.snap.new  test__test_limit-0.snap  test__test_limit-1-linux.snap  test__test_limit-1-win.snap  test__test_limit-1-win.snap.new  test__test_limit-1.snap  test__test_limit-2-linux.snap  test__test_limit-2-win.snap  test__test_limit-2-win.snap.new  test__test_limit-2.snap  test__test_limit_missing-0-linux.snap  test__test_limit_missing-0-win.snap  test__test_limit_missing-0.snap  test__test_limit_missing-1-linux.snap  test__test_limit_missing-1-win.snap  test__test_limit_missing-1.snap  test__test_limit_missing-2-linux.snap  test__test_limit_missing-2-win.snap  test__test_limit_missing-2.snap
tools/shook/: Cargo.toml  README.md  pixi.toml
tools/shook/.zed/: settings.json
tools/shook/hcl/: example.nomad.hcl
tools/shook/scripts/: setup.ps1  setup.sh
tools/shook/src/: cli.rs  config.rs  log.rs  main.rs  nomad.rs  payload.rs  server.rs  utils.rs  vm.rs  webhook.rs
tools/shook/src/cli/: common.rs  init.rs  log.rs  run.rs  serve.rs
tools/shook/src/config/: devop.rs  kioyu.rs  runner.rs  server.rs
tools/shook/src/payload/: github.rs
tools/shook/src/server/: error.rs  job.rs  vendor.rs
tools/shook/src/snapshots/: shook__config__tests__load_full_config.snap  shook__config__tests__load_minimal_uses_defaults.snap  shook__config__tests__malformed_toml_returns_error.snap  shook__config__tests__missing_required_field_returns_error.snap  shook__config__tests__schema.snap  shook__config__tests__test_invalid_config-invalid_server_port.snap  shook__config__tests__test_invalid_config-not_exist.snap  shook__config__tests__test_invalid_config-null.snap  shook__config__tests__test_valid_config-minimal.snap  (+18 more)
tools/shook/template/: shook.toml
tools/shook/tests/: test_init.rs
tools/ttyw/: .gitignore  Cargo.toml  pixi.toml
tools/ttyw/frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.js
tools/ttyw/src/: cli.rs  main.rs  server.rs
tools/vinaya/: Cargo.toml
tools/vinaya/scripts/: vinaya-cli-example.ps1
tools/vinaya/src/: cli.rs  hou.rs  main.rs
(+500 files in other folders)
