[package]
name = "clerk"
version = "0.0.4"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
], optional = true }
tracing = { version = "0.1.41", optional = true }
owo-colors = { version = "4.2.0", optional = true }
chrono = { version = "0.4.40", optional = true }
tracing-core = { version = "0.1.33", optional = true }

[features]
log = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:owo-colors",
    "dep:chrono",
    "dep:tracing-core",
]
