[project]
authors = [{ name = "Glatzel", email = "893016099@qq.com" }]
dependencies = ["lazy-loader", "rich"]
name = "toolbox"
requires-python = ">=3.13"
version = "2026.3.17"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
python = "3.13.*"
# test
pyfakefs = "==6.1.5"
pytest = "==9.0.2"
pytest-cov = "==7.1.0"
