[project]
name = "toolbox"
version = "2026.4.30"
requires-python = ">=3.13"
authors = [{ name = "Glatzel", email = "893016099@qq.com" }]
dependencies = ["lazy-loader", "rich"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
python = "3.13.*"
# test
pyfakefs = "==6.2.0"
pytest = "==9.0.3"
pytest-cov = "==7.1.0"
