[workspace]
resolver = "2"
members = ["./crates/*"]

[workspace.package]
version = "2026.5.1"
edition = "2024"

[workspace.dependencies]
arbor = { path = "./crates/arbor/", default-features = false }
clerk = { path = "./crates/clerk/", default-features = false }
mischief = { path = "./crates/mischief/" }
mischief-macros = { path = "./crates/mischief-macros/" }
rax = { path = "./crates/rax/", default-features = false }

async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = "4.6.0"
criterion = { package = "codspeed-criterion-compat", version = "4.2.0" }
defmt = "1.0.1"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
float-cmp = "0.10.0"
hashbrown = "0.17.0"
insta = "1.46.1"
owo-colors = "4.2.2"
quote = "1.0.40"
rstest = "0.26.1"
serde = "1.0.219"
serialport = "4.8.1"
supports-color = "3.0.2"
supports-hyperlinks = "3.2.0"
supports-unicode = "3.0.0"
syn = "2.0.111"
tempfile = "3.27.0"
terminal_size = "0.4.3"
textwrap = { git = "https://github.com/Glatzel/textwrap.git", default-features = false }  # if official no_std released, change to official crate
thiserror = { version = "2.0.16", default-features = false }
tokio = { version = "1.48.0", default-features = false }
tokio-serial = "5.4.5"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-core = "0.1.36"
tracing-subscriber = "0.3.22"
uuid = { version = "1.23.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
