[workspace]
resolver = "2"
members = ["./crates/*"]
exclude = ["./fuzz"]

[workspace.package]
version = "2026.7.6"
edition = "2024"

[workspace.dependencies]
arbor = { path = "./crates/arbor/", default-features = false }
clerk = { path = "./crates/clerk/", default-features = false }
mischief = { path = "./crates/mischief/" }
mischief-macros = { path = "./crates/mischief-macros/" }
rax = { path = "./crates/rax/", default-features = false }

async-trait = "0.1.89"
backtrace = "0.3.76"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = "4.6.1"
criterion = { package = "codspeed-criterion-compat", version = "4.7.0" }
defmt = "1.1.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
insta = "1.48.0"
owo-colors = "4.3.0"
quote = "1.0.45"
rstest = "0.26.1"
serde = "1.0.228"
serialport = "4.9.0"
strum = { version = "0.28.0", features = ["derive"] }
supports-color = "3.0.2"
supports-hyperlinks = "3.2.0"
supports-unicode = "3.0.0"
syn = "2.0.117"
tempfile = "3.27.0"
terminal_size = "0.4.4"
textwrap = {
  git = "https://github.com/Glatzel/textwrap.git",
  default-features = false
}                                                                                # if official no_std released, change to official crate
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.52.3", default-features = false }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-core = "0.1.36"
tracing-subscriber = "0.3.23"
uuid = "1.23.3"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
