[package]
name = "fuzz"
edition = "2024"

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "fuzz-rax-nmea"
path = "fuzz_targets/fuzz_rax_nmea.rs"
test = false

[dependencies]
libfuzzer-sys = "0.4"
rax = { path = "../../rust/crates/rax" }
rax-nmea = { path = "../../rust/crates/rax-nmea" }
