[package]
edition = "2024"
name = "orc"
version = "2026.4.7"

[dependencies]
arbor = { path = "../../rust/crates/arbor", default-features = false }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
mischief = { path = "../../rust/crates/mischief" }

clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
dunce = "1.0.5"
goblin = "0.10.5"
owo-colors = "4.2.2"
path-slash = "0.2.1"
strum = { version = "0.28", features = ["derive"] }
[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.46.1", features = ["filters"] }
rstest = "0.26.1"
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
test-mode = []
