[package]
name = "orc"
version = "2026.7.19"
edition = "2024"

[dependencies]
arbor = { path = "../../rust/crates/arbor", default-features = false }
clap-style = { path = "../../rust/crates/clap-style" }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
mischief = { path = "../../rust/crates/mischief" }

clap = { version = "4.6.2", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
dunce = "1.0.5"
goblin = "0.10.7"
owo-colors = "4.3.0"
path-slash = "0.2.1"
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["filters"] }
rstest = "0.26.1"

[features]
test-mode = []

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
