[package]
name = "shook"
version = "2026.4.7"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["dbus"]

[dependencies]
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
kioyu = { path = "../../rust/crates/kioyu" }
mischief = { path = "../../rust/crates/mischief" }

async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
dbus = { version = "0.9.10", features = ["vendored"] }
hashbrown = { version = "0.16.1", features = ["serde"] }
hex = "0.4.3"
hmac = "0.13.0"
microsandbox = "0.3.12"
schemars = "1.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.18.0", features = ["hashbrown_0_16"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "1.1.2"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.0"
insta = { version = "1.46.1", features = ["json"] }
rstest = "0.26.1"
tempfile = "3.27.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
