[package]
name = "shook"
version = "2026.6.10"
edition = "2024"

[dependencies]
clap-style = { path = "../../rust/crates/clap-style" }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
kioyu = { path = "../../rust/crates/kioyu" }
mischief = { path = "../../rust/crates/mischief" }

async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
hex = "0.4.3"
hmac = "0.13.0"
microsandbox = "0.6.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = { version = "3.21.0", features = ["hashbrown_0_16", "schemars_1"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
toml = "1.1.2"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["filters", "json"] }
rstest = "0.26.1"
tempfile = "3.27.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
