[package]
name = "ttyw"
version = "2026.4.16"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
dirs = "6.0.0"
futures = "0.3.32"
mime_guess = "2.0.5"
mischief = { path = "../../rust/crates/mischief" }
portable-pty = "0.9.0"
rust-embed = "8.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[dev-dependencies]
rstest = "0.26.1"
tokio-tungstenite = "0.29.0"
