[package]
name = "ttyw"
version = "2026.7.6"
edition = "2024"

[dependencies]
clap-style = { path = "../../rust/crates/clap-style" }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
mischief = { path = "../../rust/crates/mischief" }

axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
dirs = "6.0.0"
futures = "0.3.32"
mime_guess = "2.0.5"
portable-pty = "0.9.0"
rust-embed = "8.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }

[dev-dependencies]
rstest = "0.26.1"
tokio-tungstenite = "0.30.0"
