[package]
edition = "2021"
version = "0.1.0"
name = "vinaya"

[dependencies]
clerk = { path="../../rust/crates/clerk", features = ["tracing"] }
mischief = { path="../../rust/crates/mischief", features = ["fancy"] }

base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
comfy-table = "7.2.1"
dialoguer = "0.12.0"
dunce = "1.0.5"
glob = "0.3.3"
owo-colors = "4.2.3"
path-slash = "0.2.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde_json = "1.0.145"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true
