[package]
name = "vinaya"
version = "2026.5.1"
edition = "2024"

[dependencies]
clap-style = { path = "../../rust/crates/clap-style" }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
mischief = { path = "../../rust/crates/mischief", features = ["fancy"] }

base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
comfy-table = "7.2.1"
dialoguer = "0.12.0"
dunce = "1.0.5"
glob = "0.3.3"
owo-colors = "4.2.3"
path-slash = "0.2.1"
regex = "1.12.2"
reqwest = { version = "0.13.0", features = ["json"] }
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
serde_json = "1.0.145"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.26.1"
