[workspace]
members = ["./crates/*"]

[workspace.package]
version = "2026.7.6"
edition = "2024"

[workspace.dependencies]
clap-style = { path = "../../rust/crates/clap-style" }
clerk = { path = "../../rust/crates/clerk", features = ["tracing"] }
hou-where = { path = "./crates/hou-where" }
mischief = { path = "../../rust/crates/mischief", features = ["fancy"] }
sidefx-web = { path = "./crates/sidefx-web" }

base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
comfy-table = "7.2.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
glob = "0.3.3"
owo-colors = "4.3.0"
path-slash = "0.2.1"
regex = "1.13.0"
reqwest = { version = "0.13.4", features = ["json"] }
reqwest-middleware = "0.5.2"
reqwest-retry = "0.9.1"
rstest = "0.26.1"
serde_json = "1.0.150"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }
