[package]
edition.workspace = true
name = "clerk"
version.workspace = true

[dependencies]
# std logging (host side)
chrono = { workspace = true, optional = true }
owo-colors = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
], optional = true }

# embedded logging (firmware side)
defmt = { workspace = true, optional = true }

[features]
defmt = ["dep:defmt"]
serde = ["dep:serde"]
tracing = [
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:owo-colors",
  "dep:chrono",
  "dep:tracing-core",
]
