[package]
name = "clerk"
version.workspace = true
edition.workspace = true

[dependencies]
# std logging (host side)
chrono = { workspace = true, optional = true }
owo-colors = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
], optional = true }

# embedded logging (firmware side)
defmt = { workspace = true, optional = true }

[features]
defmt = ["dep:defmt"]
tracing = [
  "dep:chrono",
  "dep:owo-colors",
  "dep:tracing",
  "dep:tracing-core",
  "dep:tracing-subscriber",
]
