[package]
name = "kioyu"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
clerk = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
clerk = { workspace = true, features = ["tracing"] }
insta.workspace = true
mischief.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "sync",
  "test-util",
  "time"
] }
