[package]
name = "kioyu"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
clerk = { workspace = true, features = ["tracing"] }
hashbrown = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }

[dev-dependencies]
mischief.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "sync",
  "test-util",
  "time"
] }
tempfile.workspace = true
arbor.workspace = true
insta={workspace = true, features = ["filters"] }
