[package]
name = "mischief"
version.workspace = true
edition.workspace = true

[dependencies]
arbor.workspace = true
mischief-macros = { workspace = true, optional = true }
owo-colors = { workspace = true, optional = true }
supports-color = { workspace = true, optional = true }
supports-hyperlinks = { workspace = true, optional = true }
supports-unicode = { workspace = true, optional = true }
terminal_size = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }

[features]
default = ["arbor/default", "fancy", "macros"]
fancy = [
  "arbor/textwrap",
  "owo-colors",
  "supports-color",
  "supports-hyperlinks",
  "supports-unicode",
  "terminal_size",
]
macros = ["mischief-macros"]
textwrap-hyphenation = ["arbor/textwrap-hyphenation", "fancy"]
textwrap-smawk = ["arbor/textwrap-smawk", "fancy"]
textwrap-unicode-linebreak = ["arbor/textwrap-unicode-linebreak", "fancy"]
textwrap-unicode-width = ["arbor/textwrap-unicode-width", "fancy"]
