[package]
edition.workspace = true
name = "rax-nmea"
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock"] }
clerk = { workspace = true }
hashbrown = { workspace = true }
rax = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = {workspace = true}
clerk = { workspace = true, features = ["tracing"] }
float-cmp = { workspace = true }
mischief = { workspace = true }
rax = { workspace = true, features = ["async"] }
serialport = { workspace = true }

[features]
serde = ["std", "dep:serde", "chrono/serde"]
std = ["rax/std"]

[[bench]]
harness = false
name = "nmea"

[[bench]]
harness = false
name = "rules"
