[package]
name = "rax-nmea"
version.workspace = true
edition.workspace = true

[[bench]]
harness = false
name = "nmea"

[[bench]]
harness = false
name = "rules"

[dependencies]
chrono.workspace = true
clerk.workspace = true
derive-getters.workspace = true
hashbrown.workspace = true
rax.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true

[dev-dependencies]
clerk = { workspace = true, features = ["tracing"] }
criterion.workspace = true
float-cmp.workspace = true
insta = { workspace = true, features = ["filters"] }
mischief.workspace = true
rax = { workspace = true, features = ["async"] }
serialport.workspace = true

[features]
serde = ["chrono/serde", "dep:serde", "std"]
std = ["rax/std"]
