[package]
edition.workspace = true
name = "rax"
version.workspace = true

[dependencies]
async-trait = { workspace = true, optional = true }
clerk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-serial = { workspace = true, optional = true }

[dev-dependencies]
async-trait = { workspace = true }
clerk = { workspace = true, features = ["tracing"] }
criterion = { workspace = true }
mischief = { workspace = true }
serialport = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }

[features]
async = ["tokio", "tokio/io-util", "async-trait", "tokio-serial", "std"]
std = []

[[bench]]
harness = false
name = "rules"
