[package]
name = "rax"
version.workspace = true
edition.workspace = true

[[bench]]
harness = false
name = "rules"

[dependencies]
clerk.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
clerk = { workspace = true, features = ["tracing"] }
criterion.workspace = true
insta.workspace = true
rstest.workspace = true
