[package]
edition.workspace = true
name = "serialport-ext"
version.workspace = true

[dependencies]
clerk = { workspace = true }
serialport = { version = "4.7.3", optional = true }

[dev-dependencies]
serialport = "4.7.3"
clerk = { workspace = true, features = ["log"] }
mischief = { workspace = true }
