[package]
name = "sidefx-web"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
mischief.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
rstest.workspace = true
